Added passing data through Intents from Settuping scoring to scoring overview. Added recyclerview to view ends. Created the ScoringRound class to store scoring round data.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="defaultEnds">10</string>
     <string name="arrows_per_end">Arrows Per End</string>
     <string name="preset_test_button">Preset Test Button</string>
+    <string name="scoringRound">Scoring Round</string>
     <!--End Scoring Names-->
     <string-array name="divisions_array">
         <item>Barebow</item>
