--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_id">nock-lepow</string>
     <string name="app_name">Nock</string>
     <string name="title_scoring">Scoring</string>
     <string name="title_team">Team</string>
